# skillstore

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  env.example  index.html  nixpacks.toml  package-lock.json  package.json  railway.json  robots.txt  script.js  server.js  sitemap.xml  skills.json  skills.md  styles.css  temp_css.txt  temp_js.txt  vercel.json
.github/workflows/: ci.yml
assets/: banner.html  logo.html
backend/: env.example  package-lock.json  package.json  railway.json
backend/src/: db.js  index.js
backend/src/routes/: purchases.js  skills.js
contracts/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
contracts/programs/skillstore/: Cargo.toml
contracts/programs/skillstore/src/: lib.rs
contracts/scripts/: deploy-devnet.sh  init-config.ts
contracts/tests/: skillstore.ts
docs/: API.md  DEPLOYMENT.md
frontend/: index.html
frontend/css/: main.css
frontend/js/: api.js  app.js  solana.js  wallet.js
src/db/: index.js
src/services/: agent-keys.js  watermark.js
src/solana/: client.js  payment.js  skillstore-client.ts
tests/: api.test.js
