[package]
name = "skillstore"
version = "0.1.0"
description = "Skillstore marketplace program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "skillstore"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

